tests/baselines/reference/parserRegularExpression3.errors.txt
parserRegularExpression3.ts(1,1): error TS2304: Cannot find name 'Foo'.
parserRegularExpression3.ts(1,6): error TS2869: This expression is always truthy. Did you mean to test something else?


==== parserRegularExpression3.ts (2 errors) ====
    Foo(!/(\\?|&)adurl=/);
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
         ~~~~~~~~~~~~~~~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?